--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="container">
       <nav>
-        <img src="./images/logo.svg" alt="logo" class="logo">
+        <img src="./images/logo.svg" alt="fylo" class="logo">
         <ul class="links">
           <li><a href="#">Features</a></li>
           <li><a href="#">Team</a></li>
@@ -36,7 +36,7 @@
         </div>
         </div>
         <div class="image">
-          <img src="./images/illustration-1.svg">
+          <img src="./images/illustration-1.svg" alt"illustration-1">
         </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
               making the switch our team has become a well-oiled collaboration machine.
             </p>
             <div class="user">
-              <img src="./images/avatar-testimonial.jpg" alt="user">
+              <img src="./images/avatar-testimonial.jpg" alt="Kyle Burton">
               <figcaption>
                 <span>Kyle Burton</span>
                 <span>Founder & CEO, Huddle</span>
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="image">
-          <img src="./images/illustration-2.svg" >
+          <img src="./images/illustration-2.svg" alt"illustration-1">
         </div>
       </div>
     </div>
