--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         </div>
         <div class="image">
-          <img src="./images/illustration-1.svg" alt"illustration-1">
+          <img src="./images/illustration-1.svg" alt="illustration-1">
         </div>
         </div>
       </div>
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="image">
-          <img src="./images/illustration-2.svg" alt"illustration-1">
+          <img src="./images/illustration-2.svg" alt="illustration-1">
         </div>
       </div>
     </div>
